Fix TV title on mobile (#3)
* test mobile css

* test

* mobile projects tv screen position

* update

* update

* z <-> x

* fix font size

* update

* update

* update

* update

* update

* revert z pos

* fix title font size

--- a/src/Components/TVScreens/TVScreens.css
+++ b/src/Components/TVScreens/TVScreens.css
@@ -19,3 +19,14 @@
   height: fit-content;
   text-align: center;
 }
+
+/* MOBILE */
+@media screen and (max-width: 768px) {
+  .tv-title-container {
+    margin-top: -1.5em;
+  }
+
+  .tv-title {
+    font-size: 7.5px;
+  }
+}
